nullaway_error_EAF0C70F-7AF4-431A-BF51-A456CB40F3D3.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/http/server/reactive/WriteResultPublisher.java:77: error: [NullAway] dereferenced expression this.state.get() is @Nullable
		this.state.get().subscribe(this, subscriber);
		                ^
    (see http://t.uber.com/nullaway )
